--- a/index.html
+++ b/index.html
@@ -34,8 +34,15 @@
             color:burlywood;
           
         }
+        .inst{
+          padding-left: 45%;
+          color:hotpink;
+        }
         
     </style>
+    <div class="inst"><h3>Upload an image</h3>
+    <p>(any photo of a dog or a wolf or a fox)</p>
+  </div>
     <input id="photo" type="file" class="upload">
     <div id="answer" class="image"></div>
     <div class="yessir">
